--- a/MusicPlayer/MusicPlayer.Presentation/Controls/PlaybackControl.xaml
+++ b/MusicPlayer/MusicPlayer.Presentation/Controls/PlaybackControl.xaml
@@ -10,6 +10,7 @@
             <ColumnDefinition Width="auto" />
             <ColumnDefinition Width="auto" />
             <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="auto" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
@@ -82,10 +83,19 @@
                    HorizontalAlignment="Center"
                    VerticalAlignment="Center"
                    Text="{Binding NowPlaying}" />
+        <ToggleButton Grid.Row="0"
+                      Grid.Column="4"
+                      Width="25"
+                      Height="25"
+                      Margin="5"
+                      HorizontalAlignment="Center"
+                      VerticalAlignment="Center"
+                      Content="?"
+                      IsChecked="{Binding IsShuffle}" />
 
         <StackPanel Grid.Row="1"
                     Grid.Column="0"
-                    Grid.ColumnSpan="4"
+                    Grid.ColumnSpan="5"
                     Orientation="Vertical">
             <Grid>
                 <Grid.ColumnDefinitions>
