--- a/MusicPlayer/MusicPlayer.Presentation/Controls/PlaybackControl.xaml
+++ b/MusicPlayer/MusicPlayer.Presentation/Controls/PlaybackControl.xaml
@@ -1,9 +1,10 @@
-﻿<UserControl x:Class="MusicPlayer.Presentation.Controls.PlaybackControl"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d">
+﻿<UserControl
+    x:Class="MusicPlayer.Presentation.Controls.PlaybackControl"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    mc:Ignorable="d">
     <UserControl.Resources>
         <Style x:Key="SkipStyle" TargetType="Button">
             <Style.Triggers>
@@ -31,28 +32,30 @@
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
 
-        <Button x:Name="SkipBack"
-                Grid.Row="0"
-                Grid.Column="0"
-                Width="25"
-                Height="25"
-                Margin="5,0,0,0"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                HorizontalContentAlignment="Center"
-                VerticalContentAlignment="Center"
-                Command="{Binding SkipBackCommand}"
-                Content="&lt;&lt;"
-                Style="{StaticResource SkipStyle}" />
+        <Button
+            x:Name="SkipBack"
+            Grid.Row="0"
+            Grid.Column="0"
+            Width="25"
+            Height="25"
+            Margin="5,0,0,0"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            HorizontalContentAlignment="Center"
+            VerticalContentAlignment="Center"
+            Command="{Binding SkipBackCommand}"
+            Content="&lt;&lt;"
+            Style="{StaticResource SkipStyle}" />
 
-        <Button x:Name="PlayPause"
-                Grid.Row="0"
-                Grid.Column="1"
-                Width="33"
-                Height="33"
-                Margin="3"
-                Command="{Binding PlayPauseCommand}"
-                IsDefault="True">
+        <Button
+            x:Name="PlayPause"
+            Grid.Row="0"
+            Grid.Column="1"
+            Width="33"
+            Height="33"
+            Margin="3"
+            Command="{Binding PlayPauseCommand}"
+            IsDefault="True">
             <Button.Style>
                 <Style TargetType="Button">
                     <Setter Property="Content" Value="&gt;" />
@@ -72,76 +75,82 @@
             </Button.Style>
         </Button>
 
-        <Button x:Name="SkipForward"
-                Grid.Row="0"
-                Grid.Column="2"
-                Width="25"
-                Height="25"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                VerticalContentAlignment="Center"
-                Command="{Binding SkipForwardCommand}"
-                Content="&gt;&gt;"
-                Style="{StaticResource SkipStyle}" />
+        <Button
+            x:Name="SkipForward"
+            Grid.Row="0"
+            Grid.Column="2"
+            Width="25"
+            Height="25"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            VerticalContentAlignment="Center"
+            Command="{Binding SkipForwardCommand}"
+            Content="&gt;&gt;"
+            Style="{StaticResource SkipStyle}" />
 
-        <Slider x:Name="VolumeValue"
-                Grid.Row="0"
-                Grid.Column="3"
-                Width="150"
-                Margin="5"
-                VerticalAlignment="Center"
-                IsMoveToPointEnabled="True"
-                Maximum="100.0"
-                Minimum="0.0"
-                Value="{Binding Volume}" />
+        <Slider
+            x:Name="VolumeValue"
+            Grid.Row="0"
+            Grid.Column="3"
+            Width="150"
+            Margin="5"
+            VerticalAlignment="Center"
+            IsMoveToPointEnabled="True"
+            Maximum="100.0"
+            Minimum="0.0"
+            Value="{Binding Volume}" />
 
-        <TextBlock Grid.Row="0"
-                   Grid.Column="4"
-                   Margin="5"
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Center"
-                   Text="{Binding NowPlaying}" />
-        <ToggleButton Grid.Row="0"
-                      Grid.Column="5"
-                      Width="25"
-                      Height="25"
-                      Margin="5"
-                      HorizontalAlignment="Center"
-                      VerticalAlignment="Center"
-                      Content="?"
-                      IsChecked="{Binding IsShuffle}" />
+        <TextBlock
+            Grid.Row="0"
+            Grid.Column="4"
+            Margin="5"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            Text="{Binding NowPlaying}" />
+        <ToggleButton
+            Grid.Row="0"
+            Grid.Column="5"
+            Width="25"
+            Height="25"
+            Margin="5"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            Content="?"
+            IsChecked="{Binding IsShuffle}" />
 
-        <StackPanel Grid.Row="1"
-                    Grid.Column="0"
-                    Grid.ColumnSpan="6"
-                    Orientation="Vertical">
+        <StackPanel
+            Grid.Row="1"
+            Grid.Column="0"
+            Grid.ColumnSpan="6"
+            Orientation="Vertical">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
 
-                <TextBlock Grid.Column="0"
-                           Margin="2"
-                           HorizontalAlignment="Left"
-                           Text="{Binding SongPositionSpan,
-                                          StringFormat=m\\:ss}" />
-                <TextBlock Grid.Column="1"
-                           Margin="2"
-                           HorizontalAlignment="Right"
-                           Text="{Binding SongTimeSpan,
-                                          StringFormat=m\\:ss}" />
+                <TextBlock
+                    Grid.Column="0"
+                    Margin="2"
+                    HorizontalAlignment="Left"
+                    Text="{Binding SongPositionSpan, StringFormat=m\\:ss}" />
+                <TextBlock
+                    Grid.Column="1"
+                    Margin="2"
+                    HorizontalAlignment="Right"
+                    Text="{Binding SongTimeSpan, StringFormat=m\\:ss}" />
             </Grid>
-            <ProgressBar x:Name="SongProgress"
-                         Height="5"
-                         Margin="0"
-                         HorizontalAlignment="Stretch"
-                         VerticalAlignment="Center"
-                         Maximum="{Binding SongLength}"
-                         Minimum="0"
-                         MouseDown="SongProgress_MouseDown"
-                         Padding="0"
-                         Value="{Binding SongPosition}" />
+            <ProgressBar
+                x:Name="SongProgress"
+                Height="5"
+                Margin="0"
+                Padding="0"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Center"
+                Maximum="{Binding SongLength}"
+                Minimum="0"
+                MouseDown="SongProgress_MouseDown"
+                Value="{Binding SongPosition}" />
         </StackPanel>
     </Grid>
 </UserControl>
